add go CRUD RESTful API
